--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main>
+    <main class="main">
         <article>
-            <img src="">
+            <img src="avatar.png" alt="zdjęcie">
             <header>
                 <h1>Imię i Nazwisko</h1>
                 <p>Stanowisko</p>
@@ -18,7 +18,6 @@
             <p>Progranista z kilkuletnim doswiadczeniem, fotograf </p>
             <p>
                 W sieci: Facebook, Github, Istagram.
-                
             </p>
         </article>
     </main>
