Html complete bem

--- a/index.html
+++ b/index.html
@@ -9,15 +9,19 @@
 </head>
 <body>
     <main class="main">
-        <article>
-            <img src="avatar.png" alt="zdjęcie">
-            <header>
-                <h1>Imię i Nazwisko</h1>
-                <p>Stanowisko</p>
+        <article class="person">
+            <img class="person__pictures" src="avatar.png" alt="zdjęcie">
+            <header class="person__info">
+                <h1 class="person__name">Imię i Nazwisko</h1>
+                <p class="person__position">Stanowisko</p>
             </header>
-            <p>Progranista z kilkuletnim doswiadczeniem, fotograf </p>
-            <p>
-                W sieci: Facebook, Github, Istagram.
+            <p class="person__description">Programista z <strong class="special">kilkunastoletnim doświadczeniem</strong>, fotograf, operator drona, właściciel Sokoła Millennium (na razie tylko z Lego), <strong class="special">prelegent i szkoleniowiec</strong>. Uwielbia eksperymentować z nowymi technologiami, w swojej twórczości ocierając się o sztukę. 
+
+                W sieci: Facebook, GitHub, Instagram.</p>
+            <p class="person__description">
+                W sieci: <a class="person__link" href="#">Facebook</a>,
+                <a class="person__link" href="#">Github</a>,
+                <a class="person__link" href="#">Istagram</a>.
             </p>
         </article>
     </main>
