--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <h1 class="person__name">Imię i Nazwisko</h1>
                 <p class="person__position">Stanowisko</p>
             </header>
-            <p class="person__description">Programista z <strong class="special">kilkunastoletnim doświadczeniem</strong>, fotograf, operator drona, właściciel Sokoła Millennium (na razie tylko z Lego), <strong class="special">prelegent i szkoleniowiec</strong>. Uwielbia eksperymentować z nowymi technologiami, w swojej twórczości ocierając się o sztukę. 
+            <p class="person__description person__description--with-margin">Programista z <strong class="special">kilkunastoletnim doświadczeniem</strong>, fotograf, operator drona, właściciel Sokoła Millennium (na razie tylko z Lego), <strong class="special">prelegent i szkoleniowiec</strong>. Uwielbia eksperymentować z nowymi technologiami, w swojej twórczości ocierając się o sztukę. 
 
                 W sieci: Facebook, GitHub, Instagram.</p>
             <p class="person__description">
